--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
-{% extends "base.html"%}
+{% extends "base.html" %}
 {% block content %}
-<h1>This is the home page.</h1>
-<h2>Go to /puppy/name</h2>
+<div class="jumbotron">
+  <h1>Welcome to our Adoption Page</h1>
+  <p>Please select one of the links from the nav bar.</p>
+</div>
 {% endblock %}
