--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-    <title>Adoption</title>
+    <meta charset="utf-8">
+    <title></title>
   </head>
   <body>
+  <ul class="nav">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <li class="nav-item">
+    <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+  </li>
+    {% if current_user.is_authenticated %}
+    <li class="nav-link"><a href="{{ url_for('logout') }}">Log Out</a></li>
+    {% else %}
+    <li class="nav-link"><a href="{{ url_for('login') }}">Log In</a></li>
+    <li class="nav-link"><a href="{{ url_for('register') }}">Register</a></li>
+    {% endif %}
 
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
-      <a class="nav-item nav-link" href="{{ url_for('puppies.add') }}">Add Pup</a>
-      <a class="nav-item nav-link" href="{{ url_for('puppies.list') }}">List of Pups</a>
-      <a class="nav-item nav-link" href="{{ url_for('puppies.delete') }}">Delete Pup</a>
-      <a class="nav-item nav-link" href="{{ url_for('owners.add') }}">Add Owner</a>
-    </div>
+</ul>
+{% block content %}
 
-</nav>
+{% endblock %}
 
-    {% block content %}
-
-    {% endblock %}
   </body>
 </html>
