--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="jumbotron">
-  <h1>Welcome to our Adoption Page</h1>
-  <p>Please select one of the links from the nav bar.</p>
+  {% if current_user.is_authenticated %}
+    <p>Hi {{ current_user.username }}!</p>
+  {% else %}
+    <p>Please login or register!</p>
+  {% endif %}
 </div>
+
 {% endblock %}
